--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
-$primary: rgb(255, 169, 219);
+$primary: rgb(77, 94, 99);
+$secondary: rgb(216, 148, 105);
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
