--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 $primary: rgb(77, 94, 99);
 $secondary: rgb(216, 148, 105);
-$h3: 30px;
+// $h3: 30px;
+// $h2: 50px;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
