--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,25 @@
     height: 62px;
 }
 
-h2 {
+body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+}
+
+h2 {
     font-size: 50px;
+}
+
+h3 {
+    font-size: 40px;
+}
+
+h4 {
+    font-size: 30px;
+}
+
+h5 {
+    font-size: 20px;
 }
 
 /* Section 1 padding top */
@@ -30,6 +45,7 @@ h2 {
     align-items: center;
 }
 
+/* Bottom Div */
 .bottom-div {
     display: flex;
     justify-content: center;
@@ -48,3 +64,70 @@ h2 {
 .gap-50 {
     gap: 50px;
 }
+
+.o-card {
+    height: 225px;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+/* Review Section */
+    .r-card {
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 0px;
+        position: relative;
+        margin-bottom: 1.56rem;
+    }
+    .r-card {
+        position: relative;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        flex-direction: column;
+        min-width: 0px;
+        overflow-wrap: break-word;
+        background-color: rgb(248, 248, 248);
+        background-clip: border-box;
+        border: 0px solid rgba(0, 0, 0, 0.125);
+        border-radius: 0.57rem;
+    }
+    .mb-9 {
+        margin-bottom: 4.96rem !important;
+    }
+    
+    .card-icon-border-large {
+        width: 100px;
+        height: 100px;
+        margin: -3.06rem auto 0px;
+        text-align: center;
+        background-color: rgb(255, 255, 255);
+        border: 6px solid;
+        border-radius: 50%;
+        font-size: 1.88rem;
+        line-height: 90px;
+        color: rgb(102, 102, 102);
+    }
+    .mtn-80 {
+        margin-top: -5rem !important;
+    }
+    .bg-success {
+        background-color: rgb(147, 211, 207) !important;
+    }
+    .border-success {
+        border-color: rgb(147, 211, 207) !important;
+    }
+    .text-success {
+        color: rgb(147, 211, 207) !important;
+    }
+    
+    /* .bg-danger {
+        background-color: rgb(234, 112, 102) !important;
+    }
+    .border-danger {
+        border-color: rgb(234, 112, 102) !important;
+    }
+    .text-danger {
+        color: rgb(234, 112, 102) !important;
+    } */
