--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,5 @@
 $primary: rgb(77, 94, 99);
 $secondary: rgb(216, 148, 105);
-$success: (147, 211, 207);
-// $h3: 30px;
-// $h2: 50px;
+$success: (#93D3CF);
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
