--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,108 @@
 @charset "UTF-8";
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap);
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+}
+
+/* Nav height */
+.nav-height {
+  height: 62px;
+}
+
+.pd-top {
+  padding-top: 62px;
+}
+
+.pd-top-100 {
+  padding-top: 100px;
+}
+
+.pd-50 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+/* Center Div */
+.center-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Bottom Div */
+.bottom-div {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.text-shadow {
+  text-shadow: 2px 2px 3px black;
+}
+
+.coming-soon p {
+  font-size: 20px;
+}
+
+body a {
+  text-decoration: none;
+}
+
+.bg-image {
+  background-image: url("../images/greenville_banner.png");
+  height: 800px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.gap-50 {
+  gap: 50px;
+}
+
+.coming-soon .c-card {
+  height: 225px;
+}
+
+.r-card {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 0px;
+  position: relative;
+  margin-bottom: 1.56rem;
+}
+
+.r-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0px;
+  overflow-wrap: break-word;
+  background-color: rgb(248, 248, 248);
+  background-clip: border-box;
+  border: 0px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.57rem;
+}
+
+.card-icon-border-large {
+  width: 100px;
+  height: 100px;
+  margin: -3.06rem auto 0px;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border: 6px solid;
+  border-radius: 50%;
+  font-size: 1.88rem;
+  line-height: 90px;
+  color: rgb(102, 102, 102);
+}
+
+.mb-9 {
+  margin-bottom: 4.96rem !important;
+}
+
+.mtn-80 {
+  margin-top: -5rem !important;
+}
+
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -103,7 +207,7 @@
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 1px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  --bs-border-color: rgb(216, 148, 105);
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
@@ -232,29 +336,29 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: calc(1.325rem + 0.9vw);
+  font-size: calc(1.4375rem + 2.25vw);
 }
 @media (min-width: 1200px) {
   h2, .h2 {
-    font-size: 2rem;
+    font-size: 3.125rem;
   }
 }
 
 h3, .h3 {
-  font-size: calc(1.3rem + 0.6vw);
+  font-size: calc(1.375rem + 1.5vw);
 }
 @media (min-width: 1200px) {
   h3, .h3 {
-    font-size: 1.75rem;
+    font-size: 2.5rem;
   }
 }
 
 h4, .h4 {
-  font-size: calc(1.275rem + 0.3vw);
+  font-size: calc(1.3125rem + 0.75vw);
 }
 @media (min-width: 1200px) {
   h4, .h4 {
-    font-size: 1.5rem;
+    font-size: 1.875rem;
   }
 }
 
@@ -8309,15 +8413,15 @@ textarea.form-control-lg {
 }
 
 .fs-2 {
-  font-size: calc(1.325rem + 0.9vw) !important;
+  font-size: calc(1.4375rem + 2.25vw) !important;
 }
 
 .fs-3 {
-  font-size: calc(1.3rem + 0.6vw) !important;
+  font-size: calc(1.375rem + 1.5vw) !important;
 }
 
 .fs-4 {
-  font-size: calc(1.275rem + 0.3vw) !important;
+  font-size: calc(1.3125rem + 0.75vw) !important;
 }
 
 .fs-5 {
@@ -11932,13 +12036,13 @@ textarea.form-control-lg {
     font-size: 2.5rem !important;
   }
   .fs-2 {
-    font-size: 2rem !important;
+    font-size: 3.125rem !important;
   }
   .fs-3 {
-    font-size: 1.75rem !important;
+    font-size: 2.5rem !important;
   }
   .fs-4 {
-    font-size: 1.5rem !important;
+    font-size: 1.875rem !important;
   }
 }
 @media print {
