--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,127 @@
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap);
+
+// Colours
 $primary: rgb(77, 94, 99);
 $secondary: rgb(216, 148, 105);
 $success: (#93D3CF);
+$border-color: rgb(216, 148, 105);
+
+// Header Sizes
+$h2-font-size: 50px;
+$h3-font-size: 40px;
+$h4-font-size: 30px;
+$h5-font-size: 20px;
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+/* Nav height */
+.nav-height {
+    height: 62px;
+}
+
+// Personalised Padding
+.pd-top {
+    padding-top: 62px;
+}
+
+.pd-top-100 {
+    padding-top: 100px;
+}
+
+.pd-50 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+// Divs
+/* Center Div */
+.center-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Bottom Div */
+.bottom-div {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+// Text
+.text-shadow {
+    text-shadow: 2px 2px 3px black;
+}
+
+.coming-soon p {
+    font-size: 20px;
+}
+
+body a {
+    text-decoration: none;
+}
+
+// Background Image
+.bg-image {
+    background-image: url('../images/greenville_banner.png');
+    height: 800px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+// Gap
+.gap-50 {
+    gap: 50px;
+}
+
+// Card
+.coming-soon .c-card {
+    height: 225px;
+}
+
+.r-card {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 0px;
+    position: relative;
+    margin-bottom: 1.56rem;
+}
+
+.r-card {
+    position: relative;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    min-width: 0px;
+    overflow-wrap: break-word;
+    background-color: rgb(248, 248, 248);
+    background-clip: border-box;
+    border: 0px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.57rem;
+}
+
+.card-icon-border-large {
+    width: 100px;
+    height: 100px;
+    margin: -3.06rem auto 0px;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    border: 6px solid;
+    border-radius: 50%;
+    font-size: 1.88rem;
+    line-height: 90px;
+    color: rgb(102, 102, 102);
+}
+
+// Custom MArgin
+.mb-9 {
+    margin-bottom: 4.96rem !important;
+}
+
+.mtn-80 {
+    margin-top: -5rem !important;
+}
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
