Finishing menu page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,25 @@ $h3-font-size: 40px;
 $h4-font-size: 30px;
 $h5-font-size: 20px;
 
+.fa-1x {
+    font-size: 1.5rem;
+  }
+  .navbar-toggler.toggler-example {
+    cursor: pointer;
+  }
+  .dark-blue-text {
+    color: #0A38F5;
+  }
+  .dark-pink-text {
+    color: #AC003A;
+  }
+  .dark-amber-text {
+    color: #ff6f00;
+  }
+  .dark-teal-text {
+    color: #004d40;
+  }
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
